# espresso-sequencer

./: .dockerignore  .env  .env.deploy.esp.example  .env.docker.example  .gitignore  .typos.toml  Cargo.toml  README.md  crates.js  docker-compose.yaml  flake.nix  foundry.toml  help.html  hotshot.just  justfile  process-compose.yaml  rustfmt.toml  search-index.js  settings.html  src-files.js
alloy_compat/: all.html  index.html
builder/: Cargo.toml  all.html  fn.run_builder_api_service.html  index.html
cdn_broker/: all.html  fn.main.html  index.html  struct.Args.html
cdn_marshal/: all.html  fn.main.html  index.html  struct.Args.html
cdn_whitelist/: all.html  fn.main.html  index.html  struct.Args.html
client/: all.html  index.html  struct.SequencerClient.html  type.FeeMerkleProof.html  type.SequencerApiVersion.html
deploy/: all.html  enum.Command.html  fn.main.html  index.html  sidebar-items.js  struct.Options.html
dev_cdn/: all.html  fn.main.html  index.html  struct.Args.html
diff_test/: all.html  enum.Action.html  fn.main.html  index.html  struct.Cli.html
docker/: bridge.Dockerfile  builder.Dockerfile  cdn-broker.Dockerfile  cdn-marshal.Dockerfile  cdn-whitelist.Dockerfile  deploy.Dockerfile  espresso-dev-node.Dockerfile  nasty-client.Dockerfile  node-validator.Dockerfile  orchestrator.Dockerfile  prover-service.Dockerfile  sequencer.Dockerfile  staking-cli.Dockerfile  state-relay-server.Dockerfile  submit-transactions.Dockerfile
espresso_bridge/: all.html  enum.Command.html  fn.balance.html  fn.deposit.html  fn.l1_balance.html  fn.main.html  index.html  struct.Balance.html  struct.Deposit.html  struct.L1Balance.html  struct.Options.html
espresso_contract_deployer/: all.html  constant.LIBRARY_PLACEHOLDER_ADDRESS.html  constant.MAX_HISTORY_RETENTION_SECONDS.html  enum.Contract.html  fn.already_initialized.html  fn.build_provider.html  fn.build_provider_ledger.html  fn.build_random_provider.html  fn.build_signer.html  fn.deploy_fee_contract_proxy.html  fn.deploy_light_client_contract.html  fn.deploy_light_client_proxy.html  fn.deploy_ops_timelock.html  fn.deploy_safe_exit_timelock.html  fn.deploy_stake_table_proxy.html  fn.deploy_token_proxy.html  fn.encode_function_call.html  fn.get_proxy_initialized_version.html  fn.is_contract.html  fn.is_proxy_contract.html  fn.transfer_ownership.html  fn.upgrade_esp_token_v2.html  fn.upgrade_light_client_v2.html  fn.upgrade_stake_table_v2.html  index.html  sidebar-items.js  struct.Contracts.html  struct.DeployedContracts.html  type.HttpProviderWithWallet.html
espresso_crypto_helper/: all.html  fn.field_to_u256.html  fn.free_error_string.html  fn.hash_txns.html  fn.slice_from_raw_parts.html  fn.verify_merkle_proof_helper.html  fn.verify_namespace_helper.html  index.html  macro.handle_result.html  sidebar-items.js  struct.VerificationResult.html  type.CircuitField.html  type.Proof.html
espresso_types/: all.html  index.html
eval_domain/: all.html  fn.main.html  index.html
gen_demo_genesis/: all.html  fn.main.html  index.html  struct.Args.html
gen_vk_contract/: all.html  fn.main.html  index.html  struct.Cli.html
hotshot/: all.html  constant.H_256.html  constant.H_512.html  enum.HotShotError.html  fn.load_start_epoch_info.html  index.html  sidebar-items.js  struct.DoubleTwinsHandler.html  struct.HotShotInitializer.html  struct.InitializerEpochInfo.html  struct.RandomTwinsHandler.html  struct.SystemContext.html  trait.TwinsHandlerState.html  type.Channel.html
hotshot-builder-core/: Cargo.toml
hotshot-builder-core-refactored/: Cargo.toml
hotshot-query-service/: Cargo.toml
hotshot-state-prover/: README.md  RUNBOOK.md
hotshot_builder_api/: all.html  index.html  sidebar-items.js
hotshot_builder_core/: all.html  index.html
hotshot_builder_core_refactored/: all.html  index.html
hotshot_contract_adapter/: all.html  fn.field_to_u256.html  fn.u256_to_field.html  index.html  sidebar-items.js
hotshot_events_service/: all.html  (+1 more)
sdks/crypto-helper/: Cargo.toml
sdks/crypto-helper/.cargo/: config.toml
sdks/crypto-helper/src/: lib.rs
sequencer-sqlite/: Cargo.toml
(+7086 files in other folders)
