# As a workaround for feature unification by cargo this separate crate
# that is **not** a default member of the workspace.
[package]
name = "sequencer-sqlite"
version = "0.1.0"
edition = "2021"

[features]
fee = ["sequencer/fee"]
pos = ["sequencer/pos"]
drb-and-header = ["sequencer/drb-and-header"]
default = ["embedded-db", "fee", "pos", "drb-and-header"]
sqlite-unbundled = ["sequencer/sqlite-unbundled"]
embedded-db = ["sequencer/embedded-db"]

[dependencies]
sequencer = { path = "../sequencer" }
tokio = { workspace = true }
anyhow = { workspace = true }
