# As a workaround for feature unification by cargo this separate crate
# that is **not** a default member of the workspace.
[package]
name = "sequencer-sqlite"
version = "0.1.0"
edition = "2021"

[features]
fee = ["sequencer/fee"]
pos = ["sequencer/pos"]
drb-and-header = ["sequencer/drb-and-header"]
default = ["fee", "pos", "drb-and-header"]

[dependencies]
# disable default features to allow including versions on demand
sequencer = { path = "../sequencer", default-features = false, features = ["embedded-db"]}
tokio = { workspace = true }
anyhow = { workspace = true }
